# smart_home_mqtt

./: CMakeLists.txt  README.md  smart_home_mqtt.c
lib/: icons.h
